Fix menu content overlay on tablet

--- a/client/src/sass/bootstrap.scss
+++ b/client/src/sass/bootstrap.scss
@@ -170,6 +170,8 @@
         opacity: 0.75;
         content: '';
         display: block;
+        position: fixed;
+        z-index: z(overlay);
       }
     }
   }
